feat: implementa login de usuarios e geracao de tokens JWT